se agrego Lugar para poner la barra de busqueda

--- a/views/home.html
+++ b/views/home.html
@@ -9,7 +9,8 @@
 <body>
     <header>
         <img src="images/logo-mercado-liebre.svg" alt="">
-        <div>Comprá en cuotas y sin tarjeta de crédito</div>
+        <div>Lugar para poner la barra de busqueda</div>
+        <p>Comprá en cuotas y sin tarjeta de crédito</p>
         <nav>
             <ul>
                 <li><a href="">Ofertas</a></li>
