--- a/views/home.html
+++ b/views/home.html
@@ -28,57 +28,57 @@
     <main>
         <img src="images/img-home-banner.jpg" alt=""width="300">
         <section>
-            <h3>Basado en tu última visita</h3>
+            <h2>Basado en tu última visita</h2>
             <article>
                 <img src="images/img-cafetera-moulinex.jpg" alt="" width="300">
                 <p>$6.770</p>
                 <p>40% OFF</p>
-                <p>Cafetera Moulinex</p>
+                <h4>Cafetera Moulinex</h4>
             </article>
             <article>
                 <img src="images/img-macbook-pro-2019.jpg" alt="" width="300">
                 <p>$230.000</p>
                 <p>20% off</p>
-                <p>MacBook Pro 2019</p>
+                <h4>MacBook Pro 2019</h4>
             </article>
             <article>
                 <img src="images/img-samsung-galaxy-s10.jpg" alt="" width="300">
                 <p>$70.500</p>
                 <p>10% off</p>
-                <p>Samsung Galaxy S10</p>
+                <h4>Samsung Galaxy S10</h4>
             </article>
             <article>
                 <img src="images/img-tv-samsung-smart.jpg" alt="" width="300">
                 <p>$23.200</p>
                 <p>5% off</p>
-                <p>SmartTv Samsung 43"</p>
+                <h4>SmartTv Samsung 43"</h4>
             </article>
         </section>
         <section>
-            <h3>Sección de Ofertas</h3>
+            <h2>Sección de Ofertas</h2>
             <article>
                 <img src="images/img-cafetera-moulinex.jpg" alt="" width="300">
                 <p>$6.770</p>
                 <p>40% off</p>
-                <p>Cafetera Moulinex</p>
+                <h4>Cafetera Moulinex</h4>
             </article>
             <article>
                 <img src="images/img-macbook-pro-2019.jpg" alt="" width="300">
                 <p>$230.000</p>
                 <p>20% off</p>
-                <p>MacBook Pro 2019</p>
+                <h4>MacBook Pro 2019</h4>
             </article>
             <article>
                 <img src="images/img-samsung-galaxy-s10.jpg" alt="" width="300">
                 <p>$70.500</p>
                 <p>10% off</p>
-                <p>Samsung Galaxy S10</p>
+                <h4>Samsung Galaxy S10</h4>
             </article>
             <article>
                 <img src="images/img-tv-samsung-smart.jpg" alt="" width="300">
                 <p>$23.200</p>
                 <p>5% off</p>
-                <p>SmartTv Samsung 43"</p>
+                <h4>SmartTv Samsung 43"</h4>
             </article>
         </section>
     </main>
