--- a/views/home.html
+++ b/views/home.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="images/logo-mercado-liebre.svg" alt="">
+        <img src="images/logo-mercado-liebre.svg" alt="" width="100%">
         <div>Lugar para poner la barra de busqueda</div>
         <p>Comprá en cuotas y sin tarjeta de crédito</p>
         <nav>
@@ -26,29 +26,29 @@
         </nav>
     </header>
     <main>
-        <img src="images/img-home-banner.jpg" alt=""width="300">
+        <img src="images/img-home-banner.jpg" alt=""width="100%">
         <section>
             <h2>Basado en tu última visita</h2>
             <article>
-                <img src="images/img-cafetera-moulinex.jpg" alt="" width="300">
+                <img src="images/img-cafetera-moulinex.jpg" alt="" width="100%">
                 <p>$6.770</p>
                 <p>40% OFF</p>
                 <h4>Cafetera Moulinex</h4>
             </article>
             <article>
-                <img src="images/img-macbook-pro-2019.jpg" alt="" width="300">
+                <img src="images/img-macbook-pro-2019.jpg" alt="" width="100%">
                 <p>$230.000</p>
                 <p>20% off</p>
                 <h4>MacBook Pro 2019</h4>
             </article>
             <article>
-                <img src="images/img-samsung-galaxy-s10.jpg" alt="" width="300">
+                <img src="images/img-samsung-galaxy-s10.jpg" alt="" width="100%">
                 <p>$70.500</p>
                 <p>10% off</p>
                 <h4>Samsung Galaxy S10</h4>
             </article>
             <article>
-                <img src="images/img-tv-samsung-smart.jpg" alt="" width="300">
+                <img src="images/img-tv-samsung-smart.jpg" alt="" width="100%">
                 <p>$23.200</p>
                 <p>5% off</p>
                 <h4>SmartTv Samsung 43"</h4>
@@ -57,25 +57,25 @@
         <section>
             <h2>Sección de Ofertas</h2>
             <article>
-                <img src="images/img-cafetera-moulinex.jpg" alt="" width="300">
+                <img src="images/img-cafetera-moulinex.jpg" alt="" width="100%">
                 <p>$6.770</p>
                 <p>40% off</p>
                 <h4>Cafetera Moulinex</h4>
             </article>
             <article>
-                <img src="images/img-macbook-pro-2019.jpg" alt="" width="300">
+                <img src="images/img-macbook-pro-2019.jpg" alt="" width="100%">
                 <p>$230.000</p>
                 <p>20% off</p>
                 <h4>MacBook Pro 2019</h4>
             </article>
             <article>
-                <img src="images/img-samsung-galaxy-s10.jpg" alt="" width="300">
+                <img src="images/img-samsung-galaxy-s10.jpg" alt="" width="100%">
                 <p>$70.500</p>
                 <p>10% off</p>
                 <h4>Samsung Galaxy S10</h4>
             </article>
             <article>
-                <img src="images/img-tv-samsung-smart.jpg" alt="" width="300">
+                <img src="images/img-tv-samsung-smart.jpg" alt="" width="100%">
                 <p>$23.200</p>
                 <p>5% off</p>
                 <h4>SmartTv Samsung 43"</h4>
