--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,79 +1,5 @@
-* {
-    font-family: 'Roboto', sans-serif;
-    padding: 0%;
-    margin: 0%;
-}
-
-header{
-    background-color: #EAC926;
-    font-size: 12px;
-}
-
-body header img{
-    padding-top: 8%;
-    padding-left: 8%;
-}
-
-#busqueda{
-    padding: 5%;
-}
-
-body header p{
-    text-align: center;
-    margin-bottom: 5%;
-}
-
-body header nav ul li a{
-    text-decoration: none;
-    list-style: none;
-    color: black;
-}
-
-.burger-menu{
-    color: white;
-    background-color: #1259c3;
-    text-align: center;
-    font-size: 20px;
-    border-radius: 10px;
-    padding: 2%;
-    margin: 0 auto;
-    width: 20px;
-}
-
-h2{
-    font-size: 24px;
-}
-
-.precios{
-    font-size: 18px;
-}
-
-.descuentos, h4{
-    font-size: 16px;
-}
-
-footer section{
-    text-align: center;
-    margin-bottom: 10px;
-    padding: 20px
-}
-
-footer section div {
-    color: #1259c3;
-    font-size: 30px;
-    margin: 5px;
-}
-
-footer section p{
-    color: #666;
-    margin-inline: 20px;
-}
-
-h3 {
-    color: #666;
-}
-
-.copyright{
-    color: #666;
-    margin: 20px;
-}
+@import "./variables.css";
+@import "./general.css";
+@import "./header.css";
+@import "./main.css";
+@import "./footer.css";
