--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -6,7 +6,7 @@ footer section{
 
 footer section div {
     color: var(--colorCeleste);
-    font-size: 30px;
+    font-size: 2em;
     margin: 5px;
 }
 
