--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,11 +1,67 @@
+main {
+    background-color: var(--colorGrisClaro);
+}
+
+main section {
+    width: 90%;
+    margin: 0 auto;
+}
+
 main section h2{
+    color: var(--colorGrisOscuro);
     font-size: 24px;
 }
 
-main .precios{
-    font-size: 18px;
+main section article {
+    background-color: white;
+    margin: 10px 0;
 }
 
-main .descuentos, h4{
-    font-size: 16px;
+main section article .detalles {
+    padding: 0 15px;
+    border: 1px solid var(--colorGrisClaro)
+}
+
+main section article .detalles .camion {
+    color: var(--colorVerde);
+    padding: 20px;
+    border: 1px solid var(--colorVerde);
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    font-size: 20px;
+}
+
+main section article .detalles p{
+    font-size: var(--precios);
+}
+
+main section article .detalles span{
+    font-size: var(--descuentosYDescripciones);
+    color: var(--colorVerde);
+}
+
+main section article .detalles h4{  
+    display: none;
+    font-size: var(--precios);
+    color: var(--colorGrisOscuro);
+}
+
+@media(min-width: 361px){
+    main section article .detalles h4{
+        display: block;
+    }
+    
+    main section article{
+        box-shadow: 0px 0px 10px rgb(100, 100, 100);
+    }
+}
+
+@media(min-width: 769px){
+    main section article .detalles h4{
+        display: block;
+    }
+    main section article{
+        box-shadow: 0px 0px 10px rgb(100, 100, 100);
+    }
 }
