--- a/views/home.html
+++ b/views/home.html
@@ -7,13 +7,14 @@
     <title>Home</title>
     <link rel="stylesheet" href="/css/styles.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
+    <script src="https://kit.fontawesome.com/e91d9e3d42.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
         <img src="images/logo-mercado-liebre.svg" alt="" width="150">
         <div id="busqueda">
             <input type="text" placeholder="Buscar productos, marcas">
-            <br><button><i class="fas fa-search"></i></button>
+            <button><i class="fas fa-search"></i></button>
         </div>
         <p><i class="fas fa-hand-holding-usd"></i>Comprá en cuotas y sin tarjeta de crédito</p>
         <nav>
@@ -23,73 +24,117 @@
                 <li><a href="">Vender</a></li>
                 <li><a href="">Ayuda</a></li>
             </ul>
-            <br>
             <ul>
                 <li><a href="">Creá tu cuenta <i class="fas fa-id-card"></i></a></li>
                 <li><a href="">Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
                 <li><a href="">Mis compras <i class="fas fa-shopping-basket"></i></a></li>
             </ul>
-        </nav><br>
+        </nav>
+        <br>
         <div class="burger-menu">
             <i class="fas fa-bars"></i>
-            </div><br>
+            </div>
+            <br>
     </header>
     <main>
         <img src="images/img-home-banner.jpg" alt=""width="100%">
         <section>
+            <br>
             <h2>Basado en tu última visita</h2>
             <article>
                 <img src="images/img-cafetera-moulinex.jpg" alt="" width="100%">
-                <p class="precios">$6.770</p>
-                <p class="descuentos">40% OFF</p>
-                <h4>Cafetera Moulinex</h4>
+                <div class="detalles">
+                    <div class="camion">
+                        <i class="fa-solid fa-truck"></i>
+                    </div>
+                    <p>$6.770</p>
+                    <span>40% OFF</span>
+                    <h4>Cafetera Moulinex</h4>
+                </div>
             </article>
             <article>
                 <img src="images/img-macbook-pro-2019.jpg" alt="" width="100%">
-                <p class="precios">$230.000</p>
-                <p class="descuentos">20% off</p>
-                <h4>MacBook Pro 2019</h4>
+                <div class="detalles">
+                    <div class="camion">
+                        <i class="fa-solid fa-truck"></i>
+                    </div>
+                    <p>$230.000</p>
+                    <span>20% off</span>
+                    <h4>MacBook Pro 2019</h4>
+                </div>
             </article>
             <article>
                 <img src="images/img-samsung-galaxy-s10.jpg" alt="" width="100%">
-                <p class="precios">$70.500</p>
-                <p class="descuentos">10% off</p>
-                <h4>Samsung Galaxy S10</h4>
+                <div class="detalles">
+                    <div class="camion">
+                        <i class="fa-solid fa-truck"></i>
+                    </div>
+                    <p>$70.500</p>
+                    <span>10% off</span>
+                    <h4>Samsung Galaxy S10</h4>
+                </div>
             </article>
             <article>
                 <img src="images/img-tv-samsung-smart.jpg" alt="" width="100%">
-                <p class="precios">$23.200</p>
-                <p class="descuentos">5% off</p>
-                <h4>SmartTv Samsung 43"</h4>
+                <div class="detalles">
+                    <div class="camion">
+                        <i class="fa-solid fa-truck"></i>
+                    </div>
+                    <p>$23.200</p>
+                    <span>5% off</span>
+                    <h4>SmartTv Samsung 43"</h4>
+                </div>
             </article>
-        </section><br>
+        </section>
+        <br>
         <section>
             <h2>Ofertas</h2>
             <article>
                 <img src="images/img-cafetera-moulinex.jpg" alt="" width="100%">
-                <p class="precios">$6.770</p>
-                <p class="descuentos">40% off</p>
-                <h4>Cafetera Moulinex</h4>
+                <div class="detalles">
+                    <div class="camion">
+                        <i class="fa-solid fa-truck"></i>
+                    </div>
+                    <p>$6.770</p>
+                    <span>40% off</span>
+                    <h4>Cafetera Moulinex</h4>
+                </div>
             </article>
             <article>
                 <img src="images/img-macbook-pro-2019.jpg" alt="" width="100%">
-                <p class="precios">$230.000</p>
-                <p class="descuentos">20% off</p>
-                <h4>MacBook Pro 2019</h4>
+                <div class="detalles">
+                    <div class="camion">
+                        <i class="fa-solid fa-truck"></i>
+                    </div>
+                    <p>$230.000</p>
+                    <span>20% off</span>
+                    <h4>MacBook Pro 2019</h4>
+                </div>
             </article>
             <article>
                 <img src="images/img-samsung-galaxy-s10.jpg" alt="" width="100%">
-                <p class="precios">$70.500</p>
-                <p class="descuentos">10% off</p>
-                <h4>Samsung Galaxy S10</h4>
+                <div class="detalles">
+                    <div class="camion">
+                        <i class="fa-solid fa-truck"></i>
+                    </div>
+                    <p>$70.500</p>
+                    <span>10% off</span>
+                    <h4>Samsung Galaxy S10</h4>
+                </div>
             </article>
             <article>
                 <img src="images/img-tv-samsung-smart.jpg" alt="" width="100%">
-                <p class="precios">$23.200</p>
-                <p class="descuentos">5% off</p>
-                <h4>SmartTv Samsung 43"</h4>
+                <div class="detalles">
+                    <div class="camion">
+                        <i class="fa-solid fa-truck"></i>
+                    </div>
+                    <p>$23.200</p>
+                    <span>5% off</span>
+                    <h4>SmartTv Samsung 43"</h4>
+                </div>
             </article>
-        </section><br>
+        </section>
+        <br>
     </main>
     <footer>
         <section>
