--- a/views/home.html
+++ b/views/home.html
@@ -44,9 +44,7 @@
             <article>
                 <img src="images/img-cafetera-moulinex.jpg" alt="" width="100%">
                 <div class="detalles">
-                    <div class="camion">
-                        <i class="fa-solid fa-truck"></i>
-                    </div>
+                    <span><i class="fa-solid fa-truck"></i></span>
                     <p>$6.770</p>
                     <span>40% OFF</span>
                     <h4>Cafetera Moulinex</h4>
@@ -55,9 +53,7 @@
             <article>
                 <img src="images/img-macbook-pro-2019.jpg" alt="" width="100%">
                 <div class="detalles">
-                    <div class="camion">
-                        <i class="fa-solid fa-truck"></i>
-                    </div>
+                    <span><i class="fa-solid fa-truck"></i></span>
                     <p>$230.000</p>
                     <span>20% off</span>
                     <h4>MacBook Pro 2019</h4>
@@ -66,9 +62,7 @@
             <article>
                 <img src="images/img-samsung-galaxy-s10.jpg" alt="" width="100%">
                 <div class="detalles">
-                    <div class="camion">
-                        <i class="fa-solid fa-truck"></i>
-                    </div>
+                    <span><i class="fa-solid fa-truck"></i></span>
                     <p>$70.500</p>
                     <span>10% off</span>
                     <h4>Samsung Galaxy S10</h4>
@@ -77,9 +71,7 @@
             <article>
                 <img src="images/img-tv-samsung-smart.jpg" alt="" width="100%">
                 <div class="detalles">
-                    <div class="camion">
-                        <i class="fa-solid fa-truck"></i>
-                    </div>
+                    <span><i class="fa-solid fa-truck"></i></span>
                     <p>$23.200</p>
                     <span>5% off</span>
                     <h4>SmartTv Samsung 43"</h4>
@@ -92,9 +84,7 @@
             <article>
                 <img src="images/img-cafetera-moulinex.jpg" alt="" width="100%">
                 <div class="detalles">
-                    <div class="camion">
-                        <i class="fa-solid fa-truck"></i>
-                    </div>
+                    <span><i class="fa-solid fa-truck"></i></span>
                     <p>$6.770</p>
                     <span>40% off</span>
                     <h4>Cafetera Moulinex</h4>
@@ -103,9 +93,7 @@
             <article>
                 <img src="images/img-macbook-pro-2019.jpg" alt="" width="100%">
                 <div class="detalles">
-                    <div class="camion">
-                        <i class="fa-solid fa-truck"></i>
-                    </div>
+                    <span><i class="fa-solid fa-truck"></i></span>
                     <p>$230.000</p>
                     <span>20% off</span>
                     <h4>MacBook Pro 2019</h4>
@@ -114,9 +102,7 @@
             <article>
                 <img src="images/img-samsung-galaxy-s10.jpg" alt="" width="100%">
                 <div class="detalles">
-                    <div class="camion">
-                        <i class="fa-solid fa-truck"></i>
-                    </div>
+                    <span><i class="fa-solid fa-truck"></i></span>
                     <p>$70.500</p>
                     <span>10% off</span>
                     <h4>Samsung Galaxy S10</h4>
@@ -125,9 +111,7 @@
             <article>
                 <img src="images/img-tv-samsung-smart.jpg" alt="" width="100%">
                 <div class="detalles">
-                    <div class="camion">
-                        <i class="fa-solid fa-truck"></i>
-                    </div>
+                    <span><i class="fa-solid fa-truck"></i></span>
                     <p>$23.200</p>
                     <span>5% off</span>
                     <h4>SmartTv Samsung 43"</h4>
