--- a/public/css/main.css
+++ b/public/css/main.css
@@ -10,6 +10,8 @@ main section {
 main section h2{
     color: var(--colorGrisOscuro);
     font-size: 24px;
+    margin: 10px 0;
+    width: 100%;
 }
 
 main section article {
@@ -37,13 +39,20 @@ main section article .detalles {
     position: relative;
 }
 
+main section article .detalles .precio-oferta{
+    display: flex;
+    margin-bottom: 20px;
+}
+
 main section article .detalles p{
     font-size: var(--precios);
+    flex-grow: 0.30;
 }
 
 main section article .detalles span{
     font-size: var(--descuentosYDescripciones);
     color: var(--colorVerde);
+    flex-grow: 0.70;
 }
 
 main section article .detalles h4{  
@@ -53,11 +62,23 @@ main section article .detalles h4{
 }
 
 @media(min-width: 361px){
-    main section article .detalles h4{
-        display: block;
+    
+    main section{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
     }
     
     main section article{
         box-shadow: 0px 0px 10px rgb(100, 100, 100);
+        width: 45%;
     }
+    
+    main section article .detalles h4{
+        display: block;
+    }
+}
+
+@media(min-width: 769px){
+
 }
