--- a/views/home.html
+++ b/views/home.html
@@ -39,14 +39,15 @@
     <main>
         <img src="images/img-home-banner.jpg" alt=""width="100%">
         <section>
-            <br>
             <h2>Basado en tu última visita</h2>
             <article>
                 <img src="images/img-cafetera-moulinex.jpg" alt="" width="100%">
                 <div class="detalles">
                     <span><i class="fa-solid fa-truck"></i></span>
-                    <p>$6.770</p>
-                    <span>40% OFF</span>
+                    <div class="precio-oferta">
+                        <p>$6.770</p>
+                        <span>40% OFF</span>
+                    </div>
                     <h4>Cafetera Moulinex</h4>
                 </div>
             </article>
@@ -54,8 +55,10 @@
                 <img src="images/img-macbook-pro-2019.jpg" alt="" width="100%">
                 <div class="detalles">
                     <span><i class="fa-solid fa-truck"></i></span>
-                    <p>$230.000</p>
-                    <span>20% off</span>
+                    <div class="precio-oferta">
+                        <p>$6.770</p>
+                        <span>40% OFF</span>
+                    </div>
                     <h4>MacBook Pro 2019</h4>
                 </div>
             </article>
@@ -63,8 +66,10 @@
                 <img src="images/img-samsung-galaxy-s10.jpg" alt="" width="100%">
                 <div class="detalles">
                     <span><i class="fa-solid fa-truck"></i></span>
-                    <p>$70.500</p>
-                    <span>10% off</span>
+                    <div class="precio-oferta">
+                        <p>$6.770</p>
+                        <span>40% OFF</span>
+                    </div>
                     <h4>Samsung Galaxy S10</h4>
                 </div>
             </article>
@@ -72,8 +77,10 @@
                 <img src="images/img-tv-samsung-smart.jpg" alt="" width="100%">
                 <div class="detalles">
                     <span><i class="fa-solid fa-truck"></i></span>
-                    <p>$23.200</p>
-                    <span>5% off</span>
+                    <div class="precio-oferta">
+                        <p>$6.770</p>
+                        <span>40% OFF</span>
+                    </div>
                     <h4>SmartTv Samsung 43"</h4>
                 </div>
             </article>
@@ -85,8 +92,10 @@
                 <img src="images/img-cafetera-moulinex.jpg" alt="" width="100%">
                 <div class="detalles">
                     <span><i class="fa-solid fa-truck"></i></span>
-                    <p>$6.770</p>
-                    <span>40% off</span>
+                    <div class="precio-oferta">
+                        <p>$6.770</p>
+                        <span>40% OFF</span>
+                    </div>
                     <h4>Cafetera Moulinex</h4>
                 </div>
             </article>
@@ -94,8 +103,10 @@
                 <img src="images/img-macbook-pro-2019.jpg" alt="" width="100%">
                 <div class="detalles">
                     <span><i class="fa-solid fa-truck"></i></span>
-                    <p>$230.000</p>
-                    <span>20% off</span>
+                    <div class="precio-oferta">
+                        <p>$6.770</p>
+                        <span>40% OFF</span>
+                    </div>
                     <h4>MacBook Pro 2019</h4>
                 </div>
             </article>
@@ -103,8 +114,10 @@
                 <img src="images/img-samsung-galaxy-s10.jpg" alt="" width="100%">
                 <div class="detalles">
                     <span><i class="fa-solid fa-truck"></i></span>
-                    <p>$70.500</p>
-                    <span>10% off</span>
+                    <div class="precio-oferta">
+                        <p>$6.770</p>
+                        <span>40% OFF</span>
+                    </div>
                     <h4>Samsung Galaxy S10</h4>
                 </div>
             </article>
@@ -112,8 +125,10 @@
                 <img src="images/img-tv-samsung-smart.jpg" alt="" width="100%">
                 <div class="detalles">
                     <span><i class="fa-solid fa-truck"></i></span>
-                    <p>$23.200</p>
-                    <span>5% off</span>
+                    <div class="precio-oferta">
+                        <p>$6.770</p>
+                        <span>40% OFF</span>
+                    </div>
                     <h4>SmartTv Samsung 43"</h4>
                 </div>
             </article>
