--- a/views/home.html
+++ b/views/home.html
@@ -11,12 +11,14 @@
 </head>
 <body>
     <header>
-        <img src="images/logo-mercado-liebre.svg" alt="" width="150">
-        <div id="busqueda">
-            <input type="text" placeholder="Buscar productos, marcas">
-            <button><i class="fas fa-search"></i></button>
-        </div>
+        <div class="logo-busqueda">
+            <img src="images/logo-mercado-liebre.svg" alt="">
+            <div id="busqueda">
+                <input type="text" placeholder="Buscar productos, marcas">
+                <button><i class="fas fa-search"></i></button>
+            </div>
         <p><i class="fas fa-hand-holding-usd"></i>Comprá en cuotas y sin tarjeta de crédito</p>
+        </div>
         <nav>
             <ul>
                 <li><a href="">Ofertas</a></li>
