se agrego el boton enviar a login.html

--- a/views/login.html
+++ b/views/login.html
@@ -45,6 +45,8 @@
 
             <label for="password">Contraseña</label>
             <input type="password" name="password" id="password">
+
+            <a href="/"><button type="submit">Enviar</button></a>
         </form>
     </main>
     <footer>
