inicializando css de register

--- a/views/register.html
+++ b/views/register.html
@@ -39,44 +39,46 @@
             <br>
     </header>
     <main>
-        <form action="" method="post">
-            <label for="nombreCompleto">Nombre y apellido</label>
-            <input type="text" name="nombreCompleto" id="nombreCompleto">
+        <section>
+            <form action="" method="post">
+                <label for="nombreCompleto">Nombre y apellido</label>
+                <input type="text" name="nombreCompleto" id="nombreCompleto">
 
-            <label for="usuario">Nombre de usuario</label>
-            <input type="text" name="usuario" id="usuario">
+                <label for="usuario">Nombre de usuario</label>
+                <input type="text" name="usuario" id="usuario">
 
-            <label for="nacimiento">Fecha de nacimiento</label>
-            <input type="date" name="nacimiento" id="nacimiento">
+                <label for="nacimiento">Fecha de nacimiento</label>
+                <input type="date" name="nacimiento" id="nacimiento">
 
-            <label for="domicilio">Domicilio</label>
-            <input type="text" name="domicilio" id="domicilio">
+                <label for="domicilio">Domicilio</label>
+                <input type="text" name="domicilio" id="domicilio">
 
-            <p>Perfil de usuario</p>
-            <label for="comprador">Comprador</label>
-            <input type="radio" name="perfil" value="comprador" id="comprador">
-            <label for="vendedor">vendedor</label>
-            <input type="radio" name="perfil" value="vendedor">
+                <p>Perfil de usuario</p>
+                <label for="comprador">Comprador</label>
+                <input type="radio" name="perfil" value="comprador" id="comprador">
+                <label for="vendedor">vendedor</label>
+                <input type="radio" name="perfil" value="vendedor">
 
-            <p>Intereses</p>
-            <input type="checkbox" name="categorias" value="electro">Electro</input>
-            <input type="checkbox" name="categorias" value="moda">Moda</input>
-            <input type="checkbox" name="categorias" value="hogar">Hogar</input>
-            <input type="checkbox" name="categorias" value="jugueteria">Jugueteria</input>
-            <input type="checkbox" name="categorias" value="vidaSana">Vida sana</input>
+                <p>Intereses</p>
+                <input type="checkbox" name="categorias" value="electro">Electro</input>
+                <input type="checkbox" name="categorias" value="moda">Moda</input>
+                <input type="checkbox" name="categorias" value="hogar">Hogar</input>
+                <input type="checkbox" name="categorias" value="jugueteria">Jugueteria</input>
+                <input type="checkbox" name="categorias" value="vidaSana">Vida sana</input>
 
-            <label for="avatar">Seleccione una foto de perfil</label>
-            <input type="file" name="avatar" accept=".jpg">
+                <label for="avatar">Seleccione una foto de perfil</label>
+                <input type="file" name="avatar" accept=".jpg">
 
-            <label for="password">Contraseña</label>
-            <input type="password" name="password" id="password">
+                <label for="password">Contraseña</label>
+                <input type="password" name="password" id="password">
 
-            <label for="password">Confirmar contraseña</label>
-            <input type="password" name="password" id="password">
+                <label for="password">Confirmar contraseña</label>
+                <input type="password" name="password" id="password">
 
-            <a href="/"><button type="submit">Enviar</button></a>
-            <button type="reset"> Borrar</button>
-        </form>
+                <a href="/"><button type="submit">Enviar</button></a>
+                <button type="reset"> Borrar</button>
+            </form>
+        </section>
     </main>
     <footer>
         <section>
