--- a/views/home.html
+++ b/views/home.html
@@ -38,7 +38,7 @@
             </div>
             <br>
     </header>
-    <main>
+    <main class="home">
         <img src="images/img-home-banner.jpg" alt=""width="100%">
         <section>
             <h2>Basado en tu última visita</h2>
