--- a/views/login.html
+++ b/views/login.html
@@ -38,16 +38,20 @@
             </div>
             <br>
     </header>
-    <main>
-        <form action="" method="post">
-            <label for="usuario">Nombre de usuario</label>
-            <input type="text" name="usuario" id="usuario">
-
-            <label for="password">Contraseña</label>
-            <input type="password" name="password" id="password">
-
-            <a href="/"><button type="submit">Enviar</button></a>
-        </form>
+    <main class="login">
+        <section>
+            <form action="" method="post">
+                <div class="formBox">
+                    <input type="text" name="usuario" id="usuario" placeholder="Nombre de usuario">
+                </div>
+                <div class="formBox">
+                    <input type="password" name="password" id="password" placeholder="Elejí tu contraseña">
+                </div>
+                <div class="buttons">
+                    <a href="/">Enviar</a>
+                </div>
+            </form>
+        </section>
     </main>
     <footer>
         <section>
