--- a/views/register.html
+++ b/views/register.html
@@ -38,45 +38,73 @@
             </div>
             <br>
     </header>
-    <main>
+    <main class="register">
         <section>
             <form action="" method="post">
-                <label for="nombreCompleto">Nombre y apellido</label>
-                <input type="text" name="nombreCompleto" id="nombreCompleto">
-
-                <label for="usuario">Nombre de usuario</label>
-                <input type="text" name="usuario" id="usuario">
-
-                <label for="nacimiento">Fecha de nacimiento</label>
-                <input type="date" name="nacimiento" id="nacimiento">
-
-                <label for="domicilio">Domicilio</label>
-                <input type="text" name="domicilio" id="domicilio">
-
-                <p>Perfil de usuario</p>
-                <label for="comprador">Comprador</label>
-                <input type="radio" name="perfil" value="comprador" id="comprador">
-                <label for="vendedor">vendedor</label>
-                <input type="radio" name="perfil" value="vendedor">
-
-                <p>Intereses</p>
-                <input type="checkbox" name="categorias" value="electro">Electro</input>
-                <input type="checkbox" name="categorias" value="moda">Moda</input>
-                <input type="checkbox" name="categorias" value="hogar">Hogar</input>
-                <input type="checkbox" name="categorias" value="jugueteria">Jugueteria</input>
-                <input type="checkbox" name="categorias" value="vidaSana">Vida sana</input>
-
-                <label for="avatar">Seleccione una foto de perfil</label>
-                <input type="file" name="avatar" accept=".jpg">
-
-                <label for="password">Contraseña</label>
-                <input type="password" name="password" id="password">
-
-                <label for="password">Confirmar contraseña</label>
-                <input type="password" name="password" id="password">
-
-                <a href="/"><button type="submit">Enviar</button></a>
-                <button type="reset"> Borrar</button>
+                <div class="formBox">
+                    <input type="text" name="nombreCompleto" id="nombreCompleto" placeholder="Nombre y Apellido">
+                </div>
+                <div class="formBox">
+                    <input type="text" name="usuario" id="usuario" placeholder="Nombre de usuario">
+                </div>
+                <div class="formBox">
+                    <input type="email" name="e-mail" id="email" placeholder="E-mail">
+                </div>
+                <div class="formBox">
+                    <h4>Fecha de nacimiento</h4>
+                    <input type="date" name="nacimiento" id="nacimiento">
+                </div>
+                <div class="formBox">
+                    <input type="text" name="domicilio" id="domicilio" placeholder="Domicilio">
+                </div>
+                <div class="radio">
+                    <h4>Perfil de usuario</h4>
+                    <div>
+                        <input type="radio" name="perfil" value="comprador" id="comprador">
+                        <label for="comprador">Comprador</label>
+                    </div>
+                    <div>
+                        <input type="radio" name="perfil" value="vendedor" id="vendedor">
+                        <label for="vendedor">Vendedor</label>
+                    </div>
+                </div>
+                <div class="checkbox">
+                    <h4>Intereses</h4>
+                    <div>
+                        <input type="checkbox" name="categorias" value="electro">
+                        <label for="electro">Electro</label>
+                    </div>
+                    <div>
+                        <input type="checkbox" name="categorias" value="moda">
+                        <label for="moda">Moda</label>
+                    </div>
+                    <div>
+                        <input type="checkbox" name="categorias" value="hogar">
+                        <label for="hogar">Hogar</label>
+                    </div>
+                    <div>
+                        <input type="checkbox" name="categorias" value="jugueteria">
+                        <label for="jugueteria">Jugueteria</label>
+                    </div>
+                    <div>
+                        <input type="checkbox" name="categorias" value="vidaSana">
+                        <label for="vidaSana">Vida Sana</label>
+                    </div>
+                </div>
+                <div class="formBox">
+                    <h4>Seleccione una foto de perfil</h4>
+                    <input type="file" name="avatar" accept=".jpg">
+                </div>
+                <div class="formBox">
+                    <input type="password" name="password" id="password" placeholder="Elejí tu contraseña">
+                </div>
+                <div class="formBox">
+                    <input type="password" name="password" id="password" placeholder="Confirmar contraseña">
+                </div>
+                <div class="buttons">
+                    <a href="/">Enviar</a>
+                    <a href="">Borrar</a>
+                </div>
             </form>
         </section>
     </main>
