--- a/public/css/register.css
+++ b/public/css/register.css
@@ -3,16 +3,11 @@
 }
 
 .register section{
-    width: 80%;
-    margin: 20px auto;
-}
-
-.register section .formBox{
-    margin: 10px 0;
+    padding: 10px 30px;
 }
 
 .register section .formBox input{
-    margin: 5px 0;
+    margin: 15px 0;
     padding: 10px;
     width: 100%;
     border: none;
@@ -29,7 +24,7 @@
 
 .register section .buttons{
     text-align: center;
-    margin: 20px;
+    padding: 15px;
 }
 
 .register section .buttons a{
@@ -38,4 +33,26 @@
     text-decoration: none;
     border-radius: 5px;
     padding: 2%;
+}
+
+@media (min-width: 768px) {
+
+    .register section{
+        padding: 15px 60px;
+    }
+
+    .register section .buttons{
+        padding: 20px;
+    }
+}
+
+@media (min-width: 1024px) {
+
+    .register section{
+        padding: 15px 150px;
+    }
+
+    .register section .buttons{
+        padding: 30px;
+    }
 }
